<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conastrainLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:focusable="auto"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <Button
        android:id="@+id/button_logIn"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:background="@drawable/custom_buttom_first_screec"
        android:onClick="onClickLogIN"
        android:text="@string/loginn"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ed_password"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/ed_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_password"
        app:layout_constraintVertical_bias="0.179" />

    <Button
        android:id="@+id/button__signUp"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:alpha="1"
        android:background="@drawable/custom_buttom_first_screec"
        android:onClick="onClickCreateNewUser"
        android:text="@string/create_new_user"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_logIn"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="@+id/button_logIn"
        app:layout_constraintTop_toTopOf="@+id/button_logIn"
        app:layout_constraintVertical_bias="0.713" />

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:background="@drawable/custom_buttom_first_screec"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/background_dark"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:background="@drawable/custom_buttom_first_screec"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/background_dark"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ed_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_email"
        app:layout_constraintTop_toBottomOf="@+id/ed_email"
        app:layout_constraintVertical_bias="0.104" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:background="@drawable/custom_buttom_first_screec"
        android:onClick="moveToOptionSelectorScreen"
        android:text="@string/start"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:background="@drawable/custom_buttom_first_screec"
        android:onClick="onClickLogOut"
        android:text="@string/logout"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonStart"
        app:layout_constraintTop_toBottomOf="@+id/buttonStart" />

    <TextView
        android:id="@+id/tv_user_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogOut"
        app:layout_constraintEnd_toEndOf="@+id/buttonStart"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/buttonStart"
        app:layout_constraintTop_toBottomOf="@+id/buttonStart"
        app:layout_constraintVertical_bias="0.534" />

    <TextView
        android:id="@+id/tv_password_annotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6_characters_minimum"
        app:layout_constraintBottom_toTopOf="@+id/button_logIn"
        app:layout_constraintEnd_toEndOf="@+id/ed_password"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="@+id/ed_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_password"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_email_annotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_adress"
        app:layout_constraintBottom_toTopOf="@+id/ed_password"
        app:layout_constraintEnd_toEndOf="@+id/ed_email"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="@+id/ed_email"
        app:layout_constraintTop_toBottomOf="@+id/ed_email"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/editTextBackground"
        android:onClick="getNewPassword"
        android:text="Reset Password"
        app:layout_constraintBottom_toTopOf="@+id/button__signUp"
        app:layout_constraintEnd_toEndOf="@+id/ed_password"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="@+id/ed_password"
        app:layout_constraintTop_toTopOf="@+id/tv_password_annotation"
        app:layout_constraintVertical_bias="0.668" />


</androidx.constraintlayout.widget.ConstraintLayout>